<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_dialog_shape"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_login_method_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42.67dp"
        android:layout_marginLeft="21.33dp"
        android:layout_marginRight="21.33dp"
        android:layout_marginTop="32dp"
        android:text="@string/login_dialog_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_mobile_phone_number_sign_in"
        android:layout_width="330.67dp"
        android:layout_height="48.0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="21.33dp"
        android:layout_marginRight="21.33dp"
        android:background="@drawable/mobile_sign_in_button_shape"
        android:drawableRight="@drawable/smartphone"
        android:paddingRight="23.47dp"
        android:text="@string/login_method_dialog_mobile_phone_number_sign_in_button_text"
        android:textColor="@color/white" />


    <Button
        android:id="@+id/btn_google_sign_in"
        android:layout_width="330.67dp"
        android:layout_height="48.0dp"
        android:layout_marginBottom="44dp"
        android:layout_marginLeft="21.33dp"
        android:layout_marginRight="21.33dp"
        android:background="@drawable/google_sign_in_button_shape"
        android:paddingRight="23.47dp"
        android:text="@string/login_method_dialog_google_sign_in_button_text"
        android:textColor="@color/white" />
</LinearLayout>