<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="373.33dp"
    android:layout_height="280.0dp"
    android:background="@drawable/rectangle_13"
    android:elevation="3dp"
    android:layoutDirection="rtl"
    app:cardCornerRadius="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_verification_code_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="21dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="32dp"
            android:text="@string/verification_code_dialog_title"
            android:textColor="@color/dark_jungle_green_color"
            android:textSize="21.33sp" />

        <EditText
            android:id="@+id/et_code_number_verification_code_dialog_input"
            android:layout_width="match_parent"
            android:layout_height="74.67dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="21dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/surface"
            android:hint="@string/verification_code_dialog_edit_text_hint"
            android:inputType="number"
            android:paddingBottom="21.33dp"
            android:paddingLeft="18dp"
            android:paddingRight="17.42dp"
            android:paddingTop="21.33dp"
            android:textAlignment="viewStart"
            android:textColor="#99000000"
            android:textDirection="rtl"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/tv_verification_code_dialog_not_received_code_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="21dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:text="@string/tv_verification_code_dialog_not_recieved_code_link"
            android:textAlignment="viewStart"
            android:textColor="#99000000"
            android:textSize="16.0sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="21.33dp"
            android:layout_marginEnd="21dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="9.33dp"
            android:baselineAligned="true"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_verification_code_dialog_submit_code"
                android:layout_width="160.0dp"
                android:layout_height="48.0dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle_13"
                android:text="@string/btn_verification_code_dialog_submit_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18.67sp" />

            <Button
                android:id="@+id/btn_verification_code_dialog_corrent_phone_number"
                android:layout_width="160.0dp"
                android:layout_height="48.0dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/surface"
                android:text="@string/btn_verification_code_dialog_corrent_phone_number_text"
                android:textAlignment="center"
                android:textColor="@color/celestialblue"
                android:textSize="18.67sp" />


        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>