<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="24dp"
    android:layout_marginStart="24dp"
    android:orientation="vertical"
    tools:context=".ui.more.MoreFragment">

    <TextView
        android:id="@+id/fragment_more_profile_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:alpha="0.6"
        android:text="@string/fragment_more_profile_tv"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/fragment_more_contact_us_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:alpha="0.6"
        android:text="@string/fragment_more_about_us"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/fragment_more_about_us_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:alpha="0.6"
        android:text="@string/fragment_more_contact_us"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/darker_gray" />


</LinearLayout>