<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_fragment_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/profile_fragment_toolbar"
            style="@style/ToolbarTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="@color/white" />

        <LinearLayout
            android:id="@+id/profile_fragment_avatar_image_view_container_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_fragment_toolbar"
            android:layout_marginTop="32dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/profile_fragment_avatar_image_view"
                android:layout_width="96dp"
                android:layout_height="96dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_fragment_name_container_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_fragment_avatar_image_view_container_linear_layout"
            android:layout_marginTop="96dp"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/profile_fragment_shown_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:text="@string/profile_fragment_shown_name"
                    android:textColor="@color/dark_jungle_green_color"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/profile_fragment_edit_name_image_view"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignBottom="@id/profile_fragment_shown_name_text_view"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@id/profile_fragment_shown_name_text_view"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/pencil_shape" />
            </RelativeLayout>

            <EditText
                android:id="@+id/profile_fragment_first_and_last_name_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/iran_sans_mobile"
                android:hint="@string/profile_fragment_first_and_last_name"
                android:textColor="@color/dark_jungle_green_color"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_fragment_gender_container_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_fragment_name_container_linear_layout"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/profile_fragment_gender_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:text="@string/profile_fragment_gender"
                    android:textColor="@color/dark_jungle_green_color"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/profile_fragment_edit_gender_image_view"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignBottom="@id/profile_fragment_gender_title_text_view"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@id/profile_fragment_gender_title_text_view"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/pencil_shape" />
            </RelativeLayout>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/profile_fragment_gender_value_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"

                android:entries="@array/profile_fragment_gender_spinner"
                android:text="@string/profile_fragment_gender_value"
                android:textColor="@color/dark_jungle_green_color"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_fragment_birthday_container_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_fragment_gender_container_linear_layout"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/profile_fragment_birthday_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:text="@string/profile_fragment_birthday_title"
                    android:textColor="@color/dark_jungle_green_color"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/profile_fragment_edit_birthday_image_view"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignBottom="@id/profile_fragment_birthday_title_text_view"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@id/profile_fragment_birthday_title_text_view"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/pencil_shape" />
            </RelativeLayout>

            <TextView
                android:id="@+id/profile_fragment_birthday_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/iran_sans_mobile"
                android:textColor="@color/dark_jungle_green_color"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_fragment_button_container_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/profile_fragment_submit_changes_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/profile_fragment_filled_button_shape"
                android:fontFamily="@font/iran_sans_mobile_medium"
                android:text="@string/profile_fragment_submit_changes_button_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/profile_fragment_cancel_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/profile_fragment_button_shape"
                android:fontFamily="@font/iran_sans_mobile_medium"
                android:text="@string/profile_fragment_cancel_button_text"
                android:textColor="@color/celestialblue"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>